src/test/test_cases/valid/function/simple_functions/doubleImportedFunction.h
  int dec(int x) is
    return x - 1
  end

  int multByTwo(int x) is
    return x * 2
  end