src/test/test_cases/invalid/syntaxErr/function/importedFile.h
  int dec(int x) is
    return x - 1
  end


